# fusta-femas

./: .ENV  .env  .gitignore  .justfile  ARCHITECTURE.md  Cargo.toml  InitialDesign.md  README.md  TagsDesign.md
.github/: __disable__dependabot.yml  dependabot.yml
.github/workflows/: test.yml
.local/: .gitignore
.local/alt/: .gitignore
acquire/: Cargo.toml
acquire/src/: batch.rs  batch_tracker.rs  lib.rs  mock.rs  strategy.rs  strategy_list.rs  yt_dlp.rs
acquire/tests/: batch.rs  mock.rs  strategy_list.rs
acquire/tests/common/: mod.rs
app/: Cargo.toml  README.md  favicon.js
app/src/: app.rs  backend.rs  error_template.rs  feeds.rs  fileserve.rs  lib.rs  main.rs  setup_server.rs  strategies.rs  table.rs  utils.rs
app/src/entry/: details.rs  mod.rs  search.rs
app/src/feeds/: details.rs  mod.rs  new.rs  search.rs
app/src/fetch/: batch.rs  details.rs  mod.rs  search.rs
app/src/query/: filter.rs  mod.rs  query.rs
app/src/tag/: details.rs  mod.rs  new.rs  search.rs
app/style/: main.scss  object.scss  report.scss  search.scss  table.scss
backend/: Cargo.toml
backend-core/: Cargo.toml
backend-core/src/: lib.rs  strategy.rs  strategy_list.rs  yt_dlp.rs
backend/src/: feeds.rs  lib.rs
client-entrypoint/: Cargo.toml
client-entrypoint/src/: lib.rs
entities/: Cargo.toml
entities/src/: entities.rs  entry.rs  feed.rs  fetch.rs  lib.rs  prelude.rs  time_fields.rs  traits.rs
entities/src/entities/: entry.rs  feed.rs  feed_tag.rs  fetch.rs  fetch_entry.rs  tag.rs
ff-macros/: Cargo.toml
ff-macros/src/: field_list.rs  lib.rs  object.rs
ff-macros/tests/: field_list.rs  object.rs
ff-macros/tests/field_list_failures/: attribute_problems.rs  attribute_problems.stderr  field_not_reflect.rs  field_not_reflect.stderr  not_struct.rs  not_struct.stderr
ff-macros/tests/object_failures/: invalid_input.rs  invalid_input.stderr  no_id_field.rs  no_id_field.stderr  unit_struct.rs  unit_struct.stderr
ff-object/: Cargo.toml
ff-object/src/: describe.rs  lib.rs  object_ref.rs  traits.rs
ff-object/src/fields/: core.rs  mod.rs  object.rs
ffilter/: Cargo.toml
ffilter/src/: argument.rs  filter.rs  filter_list.rs  lib.rs  shared.rs
ffilter/src/filters/: arg_test.rs  fetched.rs  mod.rs  tag.rs
ffilter/src/tags/: feed_manual.rs
sea-entities/: Cargo.toml
sea-entities/src/: entry.rs  feed.rs  feeds.rs  fetch.rs  lib.rs  prelude.rs
sea-migration/: Cargo.toml
sea-migration/src/: lib.rs  m20230715_000001_enable_wal.rs  m20230715_000002_add_feeds.rs  m20230718_164002_add_fetches.rs  m20230718_164013_add_entries.rs  m20231219_000003_add_fetches.rs  m20231219_000004_add_entries.rs  m20240113_220905_tags.rs  m20240115_131700_feedtag.rs  m20240207_170000_filterless_tags.rs  main.rs  utils.rs
server-entrypoint/: Cargo.toml
server-entrypoint/src/: main.rs
server-setup/: Cargo.toml
server-setup/src/: config.rs  lib.rs  setup.rs
tags/: Cargo.toml
tags/src/: lib.rs  tag.rs  tag_list.rs
tags/src/tags/: feed.rs  feed_manual.rs  mod.rs
