[workspace]
resolver = "2"

members = [
	"sea-migration",
	"entities",
	"app",
	"acquire",
	"client-entrypoint",
	"server-setup",
	"server-entrypoint",
]

[workspace.dependencies]
leptos = "0.5.2"
leptos_meta = "0.5"
leptos_router = "0.5"
leptos_axum = "0.5"
sea-orm = {version = "0.12", features = ["runtime-tokio-rustls","sqlx-sqlite","with-time"]}
serde = {version="1", features=["derive"]}
time = "0.3"
async-trait = "0.1.73"
axum = "0.6.20"
tracing = "0.1.37"
tokio = "1.32.0"
tracing-subscriber = "0.3.17"

[[workspace.metadata.leptos]]
name = "fusta-femas"
bin-package = "server-entrypoint"
lib-package = "client-entrypoint"
# input
style-file = "app/style/main.scss"
assets-dir = "app/public"
# output
site-pkg-dir = "pkg"
browserquery = "defaults"
# environment
env = "DEV"
site-addr = "127.0.0.1:3000"
reload-port = 3001
# server features
# bin-features = ["ssr"]
# bin-default-features = false
# frontwasm features
# lib-features = ["hydrate"]
# lib-default-features = false

# [Optional] Command to use when running end2end tests. It will run in the end2end dir
# end2end-cmd = "npx playwright test"
# end2end-dir = "end2end"