[workspace]
resolver = "2"

members = [
	"sea-migration",
	"entities",
	"app",
	"ffilter",
	"acquire",
	"client-entrypoint",
	"server-setup",
	"server-entrypoint",
	"ff-macros",
	"ff-object",
]

[workspace.dependencies]
leptos = "0.6.8"
leptos_meta = "0.6.8"
leptos_router = "0.6.8"
leptos_axum = "0.6.8"
sea-orm = {version = "0.12", features = ["runtime-tokio-rustls","sqlx-sqlite","with-time"]}
serde = {version="1", features=["derive"]}
erased-serde = "0.4.4"
time = {version="0.3", features=["serde","macros","formatting"]}
async-trait = "0.1.79"
axum = "0.7.4"
tracing = "0.1.37"
tokio = {version="1.37.0", features=["full"]}
tracing-subscriber = "0.3.17"

[workspace.lints.clippy]
tabs_in_doc_comments = "allow"

[[workspace.metadata.leptos]]
name = "fusta-femas"
bin-package = "server-entrypoint"
lib-package = "client-entrypoint"
# input
style-file = "app/style/main.scss"
assets-dir = "app/public"
# output
site-pkg-dir = "pkg"
browserquery = "defaults"
# environment
env = "DEV"
site-addr = "127.0.0.1:3000"
reload-port = 3001
# server features
# bin-features = ["ssr"]
# bin-default-features = false
# frontwasm features
# lib-features = ["hydrate"]
# lib-default-features = false

# [Optional] Command to use when running end2end tests. It will run in the end2end dir
# end2end-cmd = "npx playwright test"
# end2end-dir = "end2end"