[package]
name = "acquire"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = {path="../entities", features = ["server"]}
sea-orm = {workspace = true}
async-trait = {workspace = true}
time = {workspace = true, features = ["formatting","macros","serde"]}
tokio = {workspace=true, features=["process"]}
tracing = {workspace=true}
serde = {workspace=true}
serde_json = "1.0.107"
anyhow = {version="1.0.75", features=["backtrace"]}
thiserror = "1.0.51"
tracing-subscriber = {workspace = true}

[dev-dependencies]
sea-migration = {path="../sea-migration"}
sea-orm-macros = "0.12.6"