[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
# server
leptos_axum = { workspace=true, optional = true } # Used in the error template
acquire = {path = "../acquire", optional = true}
sea-orm = {workspace = true, optional = true}
axum = {workspace = true, optional = true}
tokio = {workspace = true, optional = true}

# shared
entities = {path = "../entities"}
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = {workspace = true}
tracing = {workspace = true}
cfg-if = "1"
http = "0.2.8" # Used in the error_template
thiserror = "1.0.51" # Used in the error_template
bevy_reflect = "0.12.1"

[features]
default = ["ssr","hydrate"]
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
]
ssr = [
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
	"dep:leptos_axum",
	"dep:axum",
	"dep:acquire",
	"entities/server",
	"dep:sea-orm",
	"dep:tokio",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]
