[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
# server
acquire = {path = "../acquire", optional = true}
leptos_axum = { workspace=true, optional = true } # Used in the error template
sea-orm = {workspace = true, optional = true}
axum = {workspace = true, optional = true}

# shared
entities = {path = "../entities"}
ff-object = {path="../ff-object", features=["leptos"]}
ff-macros = {path="../ff-macros"}
ffilter = {path = "../ffilter", default-features = false}
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = {workspace = true}
tracing = {workspace = true}
serde_json = "1.0.139"
http = "1.1" # Used in the error_template
thiserror = "1.0.59" # Used in the error_template
bevy_reflect = "0.14.2"

[features]
default = ["ssr","hydrate"]
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
]
ssr = [
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
	"dep:leptos_axum",
	"dep:axum",
	"dep:acquire",
	"ffilter/server",
	"entities/server",
	"ff-object/server",
	"dep:sea-orm",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]
