[package]
name = "backend-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-entities = {path="../sea-entities"}
sea-orm = {workspace = true}
async-trait = {workspace = true}
anyhow = "1.0.72"
thiserror = "1.0.43"