[package]
name = "backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# server
backend-core = {path="../backend-core", optional = true}
sea-entities = {path="../sea-entities", optional = true}
sea-orm = {workspace = true, optional = true}
axum = {workspace=true, optional=true}
leptos_axum = {workspace=true, optional=true}
# shared
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = {workspace = true}

[features]
default = ["ssr","hydrate"]
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate"
]
ssr = [
	"dep:backend-core",
	"dep:axum",
	"dep:leptos_axum",
	"dep:sea-entities",
	"dep:sea-orm",

	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]