[package]
name = "client-entrypoint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
app = {path = "../app", default-features = false, features = ["hydrate"]}
console_error_panic_hook = {version = "0.1"}
tracing-web = {version = "0.1.3"}
wasm-bindgen = {version = "0.2.89"}
time = {workspace = true, features = ["wasm-bindgen"]} # needs to have a feature configured to work on WASM
tracing-subscriber = {workspace = true, features = ["time"]}
leptos = {workspace = true}