[package]
name = "entities"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ff-macros = {path="../ff-macros"}
cfg-if = "1"
time = {workspace = true, features = ["serde","macros","formatting"]}
serde = {workspace = true}

sea-orm = {workspace = true, optional = true}
bevy_reflect = "0.12.1"
derive_more = "0.99"

[features]
default = []
server = ["orm"]

orm = ["dep:sea-orm"]