[package]
name = "entities"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ff-macros = {path="../ff-macros"}
ff-object = {path="../ff-object"}
cfg-if = "1"
time = {workspace = true}
serde = {workspace = true}

sea-orm = {workspace = true, optional = true}
bevy_reflect = "0.14.1"
derive_more = "1.0"

[features]
default = []
server = ["orm"]

orm = ["dep:sea-orm"]