[package]
name = "ff-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.68"
quote = "1.0.36"
proc-macro2 = "1.0.81"
attribute-derive = "0.9"
# we don't need syn 1 support
proc-macro-error = {version="1.0.4", default-features = false}

[dev-dependencies]
trybuild = "1.0.91"
bevy_reflect = "0.13.2"

ff-object = {path="../ff-object"}