[package]
name = "ff-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.72"
quote = "1.0.36"
proc-macro2 = "1.0.81"
attribute-derive = "0.10"
# we don't need syn 1 support
proc-macro-error = {version="1.0.4", default-features = false}

[dev-dependencies]
trybuild = "1.0.98"
bevy_reflect = "0.14.1"

ff-object = {path="../ff-object"}