[package]
name = "ff-object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {workspace=true, optional=true}
serde = {workspace = true}
leptos = {workspace = true}
bevy_reflect = "0.12.1"

[features]
server = ["orm"]

orm = ["dep:sea-orm"]

[lints]
workspace = true