[package]
name = "ff-object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {workspace=true, optional=true}
leptos = {workspace = true, optional=true}
serde = {workspace = true}
erased-serde = {workspace=true}
bevy_reflect = "0.14.0"

[features]
server = ["orm"]

orm = ["dep:sea-orm"]
leptos = ["dep:leptos"]

[lints]
workspace = true