[package]
name = "ffilter" # extra f so "filter" can still easily be used for naming variables
version = "0.1.0"
edition = "2021"
# rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = {path="../entities"}
ff-object = {path="../ff-object", optional=true}
sea-orm = {workspace=true, optional=true}
serde = {workspace=true}
thiserror = {version="2.0.3", optional=true}
cfg-if = "1"


[features]
default = ["server"]
server = [
	"entities/server",
	"ff-object/server",
	"dep:sea-orm",
	"dep:thiserror",
]

[dev-dependencies]
sea-migration = {path="../sea-migration"}
sea-orm-macros = "0.12.15"
