[package]
name = "server-entrypoint"
version = "0.1.0"
edition = "2021"

[dependencies]
server-setup = {path = "../server-setup"}
acquire = {path = "../acquire"}
ffilter = {path = "../ffilter"}
sea-migration = {path = "../sea-migration"}
app = {path = "../app", default-features = false, features = ["ssr"]}
tokio = {workspace = true}