[package]
name = "server-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
acquire = {path = "../acquire"}
axum = {workspace = true}
leptos = {workspace = true, features = ["ssr"]}
leptos_axum = {workspace = true}
tower = {version = "0.4.13"}
tower-http = {version = "0.5", features = ["fs"]}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
tracing = {workspace = true}
dotenvy = {version = "0.15"}
sea-orm = {workspace = true}
sea-orm-migration = {version = "0.12"}
serde = {workspace = true}
envy = "0.4"
ron = "0.8.1"
thiserror = "1.0.56"
erased-serde = "0.4.2"