[package]
name = "server-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
acquire = {path = "../acquire"}
axum = {workspace = true}
tokio = {workspace = true}
leptos = {workspace = true, features = ["ssr"]}
leptos_axum = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
tracing = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
erased-serde = {workspace=true}
tower = "0.4.13"
tower-http = {version = "0.5.1", features = ["fs"]}
dotenvy = "0.15"
sea-orm-migration = "0.12"
envy = "0.4"
ron = "0.8.1"
thiserror = "1.0.56"